# mikro

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  .oxfmtrc.json  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  knip.ts  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  sdkconfig.defaults  skills-lock.json  socket.yml  taze.config.ts  test.sh  tsconfig.json  vitest.config.ts
bench-site/: README.md  package.json  tsconfig.json  wrangler.jsonc
components/microjs/: CMakeLists.txt  builtins.cpp  dbuf.cpp  fs.cpp  mem.cpp  microjs.cpp  modules.cpp  timers.cpp  ujs_fs.cpp  ujs_gpio.cpp  utils.cpp
components/microjs/include/: dbuf.h  error_utils.h  mem.h  microjs.h  private.h  utils.h
components/microjs/test/: CMakeLists.txt  fs_test.cpp  gpio_test.cpp  runtime_test.cpp  timers_test.cpp
components/quickjs/: CMakeLists.txt
docs/: cli.md  comparison.md  compatible-boards.md  config.md  contributing.md  developing-for-microcontrollers.md  environment-variables.md  error-handling.md  eslint-rules.md  getting-started.md  index.md  npm-packages.md  ota.md  package.json  registry-spec.md  testing.md  troubleshooting.md  tsconfig.json  wrangler.jsonc  wrangler.toml
esp32/: .envrc  .gitignore  CMakeLists.txt  package.json  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  main.cpp
scripts/: is-agent.js  package.json  trust-setup.ts  tsconfig.json
test/: CMakeLists.txt  (+2 more)
(+294 files in other folders)
