idf_component_register(SRCS
        "quickjs/libregexp.h" ,
        "quickjs/libregexp.c" ,
        "quickjs/libregexp-opcode.h" ,
        "quickjs/libbf.h" ,
        "quickjs/libbf.c" ,
        "quickjs/cutils.h" ,
        "quickjs/cutils.c" ,
        "quickjs/list.h" ,
        "quickjs/quickjs-atom.h" ,
        "quickjs/quickjs.h" ,
        "quickjs/quickjs.c" ,
        "quickjs/quickjs-opcode.h" ,
        "quickjs/quickjs-c-atomics.h" ,
        "quickjs/libunicode.h" ,
        "quickjs/libunicode.c" ,
        "quickjs/libunicode-table.h"
        INCLUDE_DIRS "quickjs")
